--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "1.0.1",
+    "@prisma/client": "3.11.0",
+    "axios": "^0.26.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
+    "@types/json-stringify-safe": "^5.0.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/safe-json-stringify": "^1.1.2",
+    "autoprefixer": "^10.4.3",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.11",
+    "prisma": "^3.11.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
 }
