--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
