--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.11.0",
     "axios": "^0.26.1",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.3.0",
     "react": "17.0.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/json-stringify-safe": "^5.0.0",
+    "@types/lodash": "^4.14.180",
     "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
