--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.5.3",
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.11.0",
     "axios": "^0.26.1",
