--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "1.0.1",
     "@prisma/client": "3.11.0",
     "axios": "^0.26.1",
+    "framer-motion": "^6.2.8",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-auth": "^4.3.0",
