--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
+    "react-simple-image-slider": "^2.4.1",
     "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
